# VR-Recorder

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Packages.props  OFFICIAL-SOURCES.md  README.md  VALIDATION-REPORT.md  VR-Recorder.sln  VR-Recorder_基本設計書_v0.3.md  global.json
.github/workflows/: managed-coverage.yml  native-windows.yml  repository-compliance.yml  store-msix.yml  store-public-release-gate.yml  store-release-preflight.yml
cmake/: NativeFactoryVariants.cmake  PinnedFFmpeg.cmake  PinnedOpenVR.cmake  PinnedSpout2.cmake  ProductionMediaAacAttachment.cmake  ProductionMediaH264Attachment.cmake  WriteNativeFactoryEvidence.cmake
docs/: IMPLEMENTATION-HANDOFF.md  M3-APPLICABILITY-MATRIX.md  NATIVE-PIPELINE-FAILURE-MATRIX.md  UI-MATERIAL3-CONFORMANCE.md  WINDOWS-IMPLEMENTATION-HANDOFF.md
docs/adr/: 0001-legal-bundle-integrity-v2.md  0002-legal-catalog-v3.md  0003-two-stage-windows-distribution.md  0004-native-mux-stream-contract.md  0005-ffmpeg-adapter-failure-boundaries.md  0006-encoder-identity-preheader-and-production-factory-contract.md  0007-openvr-application-manifest-lifecycle.md  0008-openvr-overlay-pose-contract.md
docs/schemas/: windows-hardware-validation-report-v1.schema.json  windows-store-packaged-hardware-validation-v1.schema.json
docs/test-list/: audio.md  camera-lease.md  compliance.md  diagnostics.md  distribution.md  encoding.md  file-finalization.md  legal-artifacts.md  media-integration.md  native-abi.md  osc-integration.md  presentation.md  recording-core.md  settings.md  steamvr-input.md  steamvr-overlay.md  storage-integration.md  timing.md  video-geometry.md  video-signal.md  windows-hardware-validation-matrix-v1.json
eng/: build-ffmpeg-contract-oracle-sdk.sh  build-ffmpeg-contract-test-sdk.sh  build-ffmpeg-windows-oracle-sdk.ps1  build-ffmpeg-windows-production-sdk.ps1  build-store-msix.ps1  ffmpeg-windows-oracle-build-recipe.md  ffmpeg-windows-production-build-recipe.md  llvm-mingw-ucrt-x86_64.cmake  managed-coverage.runsettings  new-partner-center-release-evidence.ps1  new-store-packaged-hardware-report.ps1  new-wack-waiver-evidence.ps1  openvr-windows-x64-sdk-recipe.md  prepare-openvr-windows-sdk.ps1  prepare-spout2-windows-sdk.ps1  prepare-windows-runtime-input.ps1  publish-windows-hardware-validation.ps1  scan-store-msix.ps1  spout2-windows-x64-static-build-recipe.md  store-msix-build-recipe.md  test-store-msix.ps1
legal-template/: AUTOMATION-CONTRACT.md  EXAMPLE-LEGAL-MANIFEST.sha256  M3-CONFORMANCE-REPORT.example.json  M3-SOURCE-INVENTORY.example.json  MATERIAL-SYMBOLS-MANIFEST.example.json  README.md  THIRD-PARTY-COMPONENTS.example.json  THIRD-PARTY-COMPONENTS.v2.example.json  THIRD-PARTY-COMPONENTS.v3.example.json  THIRD-PARTY-NOTICES.example.txt  license-policy.example.yml  rights-ledger.example.yml  runtime-load-manifest.example.yml  third-party-registry.example.yml
legal-template/LICENSES/: README.md
legal-template/RIGHTS/: ASSET-ATTRIBUTIONS.template.txt
legal-template/SBOM/: README.md
legal-template/SOURCE-OFFERS/: FFmpeg-SOURCE-INFO.template.txt
legal-template/schemas/: third-party-components-v2.schema.json  third-party-components-v3.schema.json  third-party-components.schema.json
src/VRRecorder.Native/: CMakeLists.txt  Makefile  exports.version  vrrecorder_native.def
src/VRRecorder.Native/include/: vrrecorder_native.h
src/VRRecorder.Native/src/: abi.cpp  annex_b_encoder_probe_decoder.cpp  annex_b_encoder_probe_decoder.hpp  audio_capture_input_runner.cpp  audio_capture_input_runner.hpp  audio_capture_input_worker.cpp  audio_capture_input_worker.hpp  audio_capture_normalizer.cpp  audio_capture_normalizer.hpp  audio_capture_platform_support.cpp  audio_capture_platform_support.hpp  audio_capture_pump.cpp  audio_capture_pump.hpp  audio_capture_session.cpp  audio_capture_session.hpp  audio_capture_source.hpp  audio_capture_source_factory.hpp  audio_capture_timeline.cpp  audio_capture_timeline.hpp  audio_encoder_config.cpp  audio_encoder_config.hpp  audio_encoding_pump.cpp  audio_encoding_pump.hpp  audio_encoding_worker.cpp  audio_encoding_worker.hpp  audio_media_event_adapter.cpp  audio_media_event_adapter.hpp  audio_mix_coordinator.cpp  audio_mix_coordinator.hpp  audio_mixer.cpp  audio_mixer.hpp  audio_pipeline_session.cpp  audio_pipeline_session.hpp  audio_timeline_buffer.cpp  audio_timeline_buffer.hpp  av_sync_media_event_adapter.cpp  av_sync_media_event_adapter.hpp  av_sync_monitor.cpp  av_sync_monitor.hpp  d3d11_nv12_frame_mapper.cpp  (+170 more)
tests/VRRecorder.Native.Tests/: CMakeLists.txt  Makefile  abi_contract_tests.cpp  allocation_failure_test_support.hpp  annex_b_encoder_probe_decoder_tests.cpp  audio_capture_input_worker_tests.cpp  audio_capture_normalizer_tests.cpp  audio_capture_platform_support_tests.cpp  audio_capture_pump_tests.cpp  audio_capture_session_tests.cpp  audio_capture_source_factory_tests.cpp  audio_capture_timeline_tests.cpp  audio_encoder_config_tests.cpp  audio_encoding_pump_tests.cpp  audio_encoding_worker_tests.cpp  audio_media_event_adapter_tests.cpp  audio_mix_coordinator_tests.cpp  audio_mixer_tests.cpp  audio_pipeline_session_tests.cpp  audio_timeline_buffer_tests.cpp  av_sync_media_event_adapter_tests.cpp  av_sync_monitor_tests.cpp  c_header_runtime_smoke.c  c_header_smoke.c  cmake_build_contract.cmake  collect_gcov_json.cmake  collect_gcov_json_contract.cmake  d3d11_nv12_frame_mapper_tests.cpp  d3d11_video_frame_processor_tests.cpp  encoded_media_packet_submission_test_support.hpp  encoder_probe_evidence_builder_tests.cpp  encoder_probe_pipeline_tests.cpp  encoder_probe_synthetic_nv12_tests.cpp  expected_exports.txt  fake_control_exports.cpp  fake_media_backend.cpp  fake_media_backend.hpp  ffmpeg_aac_audio_pipeline_tests.cpp  ffmpeg_aac_decode_oracle.cpp  ffmpeg_aac_packet_encoder_tests.cpp  (+54 more)
ui-template/: README.md  design-tokens.example.json  localization-contract.example.yml  m3-conformance-matrix.example.yml  m3-conformance-profile.example.yml  m3-source-inventory.example.yml  material-symbols-manifest.example.yml
(+909 files in other folders)
